[build-system]
requires = ["setuptools >= 70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "disstans"
version = "2.1.1"
requires-python = ">= 3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "cartopy>=0.22",
    "pandas>=2.1",
    "tqdm",
    "cvxpy>=1.3",
    "cmcrameri",
    "owslib",
    "sqlalchemy"
]
authors = [
    {name = "Tobias Köhne", email = "47008700+tobiscode@users.noreply.github.com"}
]
description = "DISSTANS"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3"
]

[project.optional-dependencies]
okada = ["okada-wrapper>=24.6.15"]

[project.urls]
Repository = "https://github.com/tobiscode/disstans"
Documentation = "https://tobiscode.github.io/disstans/"
"Bug Tracker" = "https://github.com/tobiscode/disstans/issues"

[tool.setuptools]
packages = ["disstans"]

[external]
dependencies = ["ffmpeg"]
