[metadata]
name = disstans
version = attr: disstans.__version__
description = DISSTANS
long_description = file: README.md
author = Tobias Köhne
author_email = 47008700+tobiscode@users.noreply.github.com
url = https://github.com/tobiscode/disstans
license = GNU General Public License v3 (GPLv3)
classifiers =
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python :: 3'

[options]
python_requires = >=3
packages =
    disstans
